# Flappy-Nerd

./: .dockerignore  .gitignore  .project  Dockerfile  README.md  package-lock.json
.github/workflows/: pixi-pages.yml  web-rust.yml
java-og/src/: FlappyNerd.java
src/: FlappyNerd.java  QuizletArray.java
web-pixi/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web-pixi/src/: main.ts
web-rust/: Cargo.toml  README.md  build.sh  index.html
web-rust/src/: game.rs  hud.rs  lib.rs
web-rust/src/shaders/: quad.wgsl
