[package]
name = "flappy_nerd_web"
version = "0.1.0"
edition = "2021"
authors = ["Flappy Nerd Team"]
description = "High-FPS WebGPU port of Flappy Nerd"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "Window",
    "Navigator",
    "Performance",
    "Location",
    "UrlSearchParams",
] }
wgpu = { version = "0.20", features = ["webgpu", "trace"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
